# pntr

./: Cargo.toml
src/: framelimiter.rs  layout.rs  main.rs  shader.wgsl
src/components/: canvas.rs  image.rs  mod.rs
src/components/canvas/: mod.rs
src/components/image/: image.wgsl  mod.rs
src/components/shaders/: canvas.wgsl  image.wgsl
