[package]
name = "pntr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
bytemuck = { version = "1.12.0", features = [ "derive" ]}
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
rand = "0.8.5"
wgpu = "0.14.2"
winit = "0.27.5"

[profile.dev.package."*"]
opt-level = 3
